tests/baselines/reference/iteratorSpreadInArray5.errors.txt
iteratorSpreadInArray5.ts(14,23): error TS2322: Type '(number | symbol)[]' is not assignable to type 'number[]'.
  Type 'number | symbol' is not assignable to type 'number'.
    Type 'symbol' is not assignable to type 'number'.


==== iteratorSpreadInArray5.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: number[] = [0, 1, ...new SymbolIterator];
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(number | symbol)[]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'number | symbol' is not assignable to type 'number'.
!!! error TS2322:     Type 'symbol' is not assignable to type 'number'.